# vulkan_voxel_game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
assets/: CMakeLists.txt
assets/models/: scene.glb  smooth_vase.gltf
assets/shaders/: CMakeLists.txt  complieShaders.bat  fragment.frag  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert  vertex.vert
src/: EngineUtils.cpp  EngineUtils.h  engine_buffer.cpp  engine_buffer.hpp  engine_camera.cpp  engine_camera.hpp  engine_descriptors.cpp  engine_descriptors.hpp  engine_device.cpp  engine_device.hpp  engine_frame_info.cpp  engine_frame_info.hpp  engine_game_object.cpp  engine_game_object.hpp  engine_model.cpp  engine_model.hpp  engine_pipeline.cpp  engine_pipeline.hpp  engine_renderer.cpp  engine_renderer.hpp  engine_swapchain.cpp  engine_swapchain.hpp  engine_texture.cpp  engine_texture.hpp  engine_utils.cpp  engine_utils.hpp  engine_window.cpp  engine_window.hpp  file_loader.cpp  file_loader.hpp  first_app.cpp  first_app.hpp  game_application.cpp  game_application.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  simple_render_system.cpp  simple_render_system.hpp  vulkan_helpers.cpp  (+1 more)
src/math/: engine_math.cpp  engine_math.hpp  math_scaler.cpp  math_scaler.hpp
src/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
